// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Green 1`] = `
<button
  className="sc-bdfBQB fgWrUn"
  color="#fff"
  style={
    Object {
      "backgroundColor": "green",
      "border": "none",
      "padding": "2rem 4rem",
    }
  }
>
  Press Me
</button>
`;

exports[`Storyshots Components/Button Large 1`] = `
<button
  className="sc-bdfBQB fgWrUn"
  color="#fff"
  style={
    Object {
      "backgroundColor": "blue",
      "border": "none",
      "padding": "3rem 6rem",
    }
  }
>
  Press Me
</button>
`;

exports[`Storyshots Components/Button Long Label 1`] = `
<button
  className="sc-bdfBQB fgWrUn"
  color="#fff"
  style={
    Object {
      "backgroundColor": "blue",
      "border": "none",
      "padding": "2rem 4rem",
    }
  }
>
  Press MePress MPress MPress MPress MPress MPress MPress MPress M
</button>
`;

exports[`Storyshots Components/Button Red 1`] = `
<button
  className="sc-bdfBQB fgWrUn"
  color="#fff"
  style={
    Object {
      "backgroundColor": "red",
      "border": "none",
      "padding": "2rem 4rem",
    }
  }
>
  Press Me
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="sc-bdfBQB fgWrUn"
  color="#fff"
  style={
    Object {
      "backgroundColor": "blue",
      "border": "none",
      "padding": "1rem 2rem",
    }
  }
>
  Press Me
</button>
`;
